# caproni

./: .gitignore  CMakeLists.txt  LICENSE  README.md  versioned-s3-artifacts.md
ci/: build-linux-task.yml  integration-linux-task.yml  promote-to-final-task.yml  semver-pipeline.yml  timestamp-pipeline.yml  unit-linux-task.yml
ci/docker/: Dockerfile-alpine-cpp-buildtools  Dockerfile-ubu1704-cpp-buildtools
src/: caproni.cpp  caproni.hpp  main.cpp
